--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ body{
         align-items: center;
        
         background-color: white;
+        position:sticky;
+        top:0;
+        z-index: 2;
         
         
     }
@@ -131,6 +134,7 @@ font-size: 30px;
     gap:10px;
     margin-bottom: 10px;
     position: relative;
+    z-index: 1;
     }
 
     .options{
@@ -266,6 +270,7 @@ text-align: center;
 margin:10px 250px;
 margin-bottom: 1px;
 margin-top: 50px;
+padding-bottom: 10px;
 
 }
 .icon-flex{
