--- a/style.css
+++ b/style.css
@@ -298,7 +298,8 @@ padding-bottom: 10px;
 }
 }
 
-@media(max-width:799px){
+@media(min-width:489px)and (max-width:799px)
+{
     .nav-bar{
         height:500px;
         width:100px;
@@ -474,6 +475,285 @@ padding-bottom: 10px;
     margin:10px 100px;
     margin-bottom: 1px;
     margin-top: 30px;
+    
+    }
+    .icon-flex{
+        position: absolute;
+        display: flex;
+       gap:1px;
+       align-items: center;
+       margin-top: 350px;
+       margin-left: 35px;
+       display: none;
+    }
+    .icon{
+        width:26px;
+        height:26px;
+        display: none;
+    }
+    .icon-para1{
+        font-size: 15px;
+        color: rgb(252, 247, 247);
+        margin-bottom: 1px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        display: none;
+    }
+    .icon-para2{
+        font-size: 15px;
+        color: rgb(249, 244, 244);
+        margin-top: 1px;
+        display: none;
+    }
+    
+    .options{
+        height:20px;
+        width:50px;
+        display:flex;
+        align-items: center;
+        margin-top: 8px;
+        margin-bottom: 10px;
+        display: none;
+    }
+    .CI-heading{
+    font-size: 10px;
+    margin-left:20px;
+    white-space: nowrap;
+    display: none;
+    
+    }
+    .CI-options{
+        font-size: 9px;
+        margin-left: 20px;
+        align-items: center;
+        padding: 2px 8px;
+        text-align: center;
+        white-space: nowrap; /*to get text in one line*/
+        display: none;
+}
+        .CI-img{
+            width:9px;
+            align-items: center;
+            vertical-align: 7px;/*to align text and image*/
+            display: none;
+        }
+        .CI-sub-op{
+            display: flex;
+            align-items: center;
+            display: none;
+           
+        }
+        
+        .CI-buttons{
+            display: flex;
+            align-items: center;
+            margin-left: 50px;
+            gap:3px;
+            margin-bottom: 10px;
+            display: none;
+
+        }
+        .login2{
+            height: 20px;
+            width:60px;
+            background-color: white;
+            border: 1px solid black;
+            border-radius: 8px;
+            font-size: 10px;
+            display: none;
+        }
+        .create-ac{
+            height: 20px;
+            width:100px;
+            color:white;
+            background-color: black;
+            border-radius: 8px;
+            font-size: 10px;
+            display: none;
+
+        }
+
+}
+@media(max-width:488px)
+{
+    .nav-bar{
+        height:470px;
+        width:50px;
+        display:flex;
+        flex-direction: column;
+        gap:10px;
+        border:none;
+        margin-top: 10px;
+        align-items: center;
+        background-color: white;
+        margin-left: 200px;
+        
+        
+    }
+    
+    .logo{
+        width:150px;
+        height:auto;
+       
+    
+    }
+    
+    .search-bar{
+        width:250px;
+        display: flex;
+        gap:40px;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 10px;
+        border:none;
+        
+        padding:3px 18px;
+       
+    }
+    .down-arrow{
+        width:15px;
+    }
+    .search-bar2{
+        display:flex;
+        align-items: center;
+        gap:2px;
+    
+    }
+    .nav-para{
+        font-weight: 40px;
+        width:110px;
+    }
+    .login-btn{
+        background-color: black;
+            color:white;
+            padding: 10px 20px;
+          border: none;
+          font-size: 13px;
+          border-radius: 12px;
+          
+    }
+    .login-signup{
+        display:flex;
+        gap:100px;
+        align-items: center;
+
+    }
+    
+    .top-title{
+        font-size: 20px;
+        margin-top: 10px ;
+        margin-left: 12px;
+        width:380px;
+    }
+    .dp{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-right: 100px;
+        margin-left: 12px;
+      
+    }
+    .heart-bookmark-btn{
+        display: flex; 
+        gap:20px;
+        align-items: center;
+       
+    }
+    .inside-dp{
+        display:flex;
+        gap:15px;
+        align-items: center;
+    }
+    .dpic{
+        border-radius: 50%;
+        width:65px;
+        
+    }
+    .follow{
+        color:gray;
+        margin-top: 1px;
+    }
+    .GTI{
+        color: white;
+        background-color: black;
+        padding: 5px 10px;
+        border-radius: 20px;
+        width:100px;
+    }
+  
+    .card{
+        background-color: rgb(219, 222, 219);
+    width:400px;
+    height: 400px;
+    border-radius: 15px;
+    overflow: hidden;
+    font-size: 15px;
+    margin-left: 40px;
+    
+    }
+    .card-inside{
+       
+        width: 17em;
+    height: 17em;
+        background-color: rgb(254, 255, 254);
+        border: none;
+      margin-left: 70px;
+        margin-top: 15px;
+        
+    }
+    .card-sub-inside{
+        width: 15.6em;
+        height: 14.3em;
+        background-color: rgb(218, 236, 215);
+        border: none;
+        position: absolute;
+        border-radius: 14px;
+        margin-top: 20px;
+        margin-left: 12px;
+       
+    }
+    
+    
+    .card-img
+    {
+        width:15em;
+        height:12.5em ;
+        object-fit: cover;
+        
+        margin-left: 5px;
+        margin-top: 5px;
+        border-radius: 50%;
+        
+    }
+    .card-heading{
+    text-align: center;
+    margin: 20px 50px;
+    font-size: 1em;
+    padding:1px 1px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-bottom: 1px;;
+    }
+    .card-para{
+        text-align: center;
+        color:rgb(7, 75, 7);
+        margin: 5px 70px;
+        font-size: .5em;
+    padding:1px 1px;
+    margin-top: 1px;
+    }
+    .card-small-heading{
+        font-size: 10px;
+        color: green;
+        border-radius: 14px;
+        background-color: rgb(175, 200, 175);
+    display:inline-block;
+    padding: 2px 40px;
+    width:120px;
+    height: 25px;
+    text-align: center;
+    margin:10px 100px;
+    margin-bottom: 1px;
+    margin-top: 30px;
+    display:none;
     
     }
     .icon-flex{
